--- a/_sass/partials/_typography.scss
+++ b/_sass/partials/_typography.scss
@@ -6,55 +6,152 @@
 */
 
 $base-font-size: 0.95rem;
+$base-line-height: 1.5rem;
+$base-header-size: 2.25rem;
 
-body {
-  font-family: $body-font-family;
-  color: $navy;
-  text-align: center;
-  font-size: $base-font-size;
-}
+@media only screen and (max-width: 2560px) { 
+  body {
+    font-family: $body-font-family;
+    color: $navy;
+    text-align: center;
+    font-size: $base-font-size * $xxl-multiplier;
+  }
 
-h1 {
-  font-family: $header-font-family;
-  font-weight: normal;
-  font-style: italic;
-  font-size: 2.25rem;
-  margin-bottom: -0.5rem;
-}
+  h1 {
+    font-family: $header-font-family;
+    font-weight: normal;
+    font-style: italic;
+    font-size: $base-header-size * $xxl-multiplier;
+    margin-bottom: -0.5rem;
+  }
 
-h3 {
-  font-weight: 500;
-}
-
-p {
-  line-height: 1.5rem;
-}
-
-header {
-  width: 35vw;
-  margin: 0 auto;
+  h3 {
+    font-weight: 500;
+  }
 
   p {
-    margin: 0 auto;
-    margin-top: 1.5rem;
-    margin-bottom: 2rem;
-    width: 30vw;
+    line-height: $base-line-height * $xxl-multiplier;
   }
-}
 
-button {
-  font-size: $base-font-size;
-}
-
-/*@media only screen and (max-width: 1024px) { 
   header {
-    min-width: 30rem;
+    width: 35vw;
+    margin: 0 auto;
 
     p {
-      min-width: 25rem;
+      margin: 0 auto;
+      margin-top: 1.5rem;
+      margin-bottom: 2rem;
+      width: 30vw;
     }
   }
-}*/
+
+  button {
+    font-size: $base-font-size * $xxl-multiplier;
+  }
+}
+
+@media only screen and (max-width: 1920px) { 
+  body {
+    font-size: $base-font-size * $xl-multiplier;
+  }
+
+  h1 {
+    font-size: $base-header-size * $xl-multiplier;
+    margin-bottom: -0.5rem;
+  }
+
+  p {
+    line-height: $base-line-height * $xl-multiplier;
+  }
+
+  header {
+    width: 35vw;
+    margin: 0 auto;
+
+    p {
+      margin: 0 auto;
+      margin-top: 1.5rem;
+      margin-bottom: 2rem;
+      width: 30vw;
+    }
+  }
+
+  button {
+    font-size: $base-font-size * $xl-multiplier;
+  }
+}
+
+@media only screen and (max-width: 1440px) { 
+  body {
+    font-size: $base-font-size;
+  }
+
+  h1 {
+    font-size: $base-header-size;
+    margin-bottom: -0.5rem;
+  }
+
+  p {
+    line-height: $base-line-height;
+  }
+
+  header {
+    width: 35vw;
+    margin: 0 auto;
+
+    p {
+      margin: 0 auto;
+      margin-top: 1.5rem;
+      margin-bottom: 2rem;
+      width: 30vw;
+    }
+  }
+
+  button {
+    font-size: $base-font-size;
+  }
+}
+
+@media only screen and (max-width: 1366px) { 
+  body {
+    font-family: $body-font-family;
+    color: $navy;
+    text-align: center;
+    font-size: $base-font-size;
+  }
+
+  h1 {
+    font-family: $header-font-family;
+    font-weight: normal;
+    font-style: italic;
+    font-size: $base-header-size;
+    margin-bottom: -0.5rem;
+  }
+
+  h3 {
+    font-weight: 500;
+  }
+
+  p {
+    line-height: $base-line-height;
+  }
+
+  header {
+    width: 35vw;
+    margin: 0 auto;
+
+    p {
+      margin: 0 auto;
+      margin-top: 1.5rem;
+      margin-bottom: 2rem;
+      width: 30vw;
+    }
+  }
+
+  button {
+    font-size: $base-font-size * $l-multiplier;
+  }
+}
 
 @media only screen and (max-width: 1024px) { 
   header {
