--- a/_sass/partials/_small-module.scss
+++ b/_sass/partials/_small-module.scss
@@ -15,7 +15,7 @@ $module-padding-top: ($icon-size / 2) - 1;
 $module-text-padding-top: ($icon-size + 1);
 
 
-@media only screen and (max-width: 2560px) {
+//@media only screen and (max-width: 2560px) {
   #services { 
     ul {
       list-style-type: none;
@@ -58,7 +58,7 @@ $module-text-padding-top: ($icon-size + 1);
       z-index: 3;
     }
   }
-}
+//}
 
 @media only screen and (max-width: 1920px) {  
   #services { 
