scaled footer height for larger screens

--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -2,7 +2,7 @@
   <section>
     <img id="logo" alt="Be Wilder Creative" src="{{ site.logo }}" />
 
-    <p>An all-women studio who strives to provide beautiful, accessible, and functional 
+    <p>An all-women studio with the goal of providing beautiful, accessible, and functional 
   design solutions.</p>
 
     <button>Get to know us</button>
